tests/cases/smoke/valid/func_none_fallthrough.dp
func log(msg: str) -> none {
    print(msg)
}
log("hello")
