tests/cases/smoke/invalid/error_catch_non_record_type.dp
try {
    print("x")
} catch err: int {
    print(err)
}
